--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,12 @@
 # Jobs
 # VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: X1 Group
+  position: Senior software engineer
+  duration: Dec, 2017 &mdash; Present
+  summary: >-
+    Backend developer at Finiata.DE - Berlin-based fintech startup: Ruby 2.5, Rails 5, PosgreSQL
+    including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li>
+    <li>Another awesome project</li><li>or a team or department you worked with</li></ul>
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
