--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Software Developer with over 11 years industry experience, with last 7 years in full-stack web-development. Positive, motivated, hardworking person who is keen to learn and contribute. With technical skills combined with excellent communication skills that allows to get along well with others.</p>"
+resume_header_intro: "<p>Software Developer with over 11 years of industry experience, with last 7 years in full-stack web-development. Positive, motivated, hardworking person who is keen to learn and contribute. With technical skills combined with excellent communication skills that allow to get along well with others.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
